--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,10 +12,11 @@
     <dimen name="key_pad_min_height">@dimen/_250sdp</dimen>
 
 
-        <dimen name="otp_view_item_size">48dp</dimen>
+    <dimen name="otp_view_item_size">48dp</dimen>
     <dimen name="otp_view_item_spacing">5dp</dimen>
-        <dimen name="otp_view_item_line_width">2dp</dimen>
-        <dimen name="otp_view_cursor_width">2dp</dimen>
+    <dimen name="otp_view_item_line_width">2dp</dimen>
+    <dimen name="otp_view_cursor_width">2dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 
 </resources>
