--- a/app/src/main/res/layout/content_set_up_pin.xml
+++ b/app/src/main/res/layout/content_set_up_pin.xml
@@ -35,7 +35,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:passwordToggleEnabled="true">
+                   >
 
                     <com.app.l_pesa.common.CommonEditTextRegular
                         android:id="@+id/etNewPin"
@@ -66,6 +66,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/commonInputLayout12"
+                    app:passwordToggleEnabled="true"
                     >
 
                     <com.app.l_pesa.common.CommonEditTextRegular
