--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,9 +15,9 @@
           android:id="@+id/imgProfile"
           android:layout_width="@dimen/_55sdp"
           android:layout_height="@dimen/_55sdp"
-          app:civ_border_width="0dp"
+          app:civ_border_width="@dimen/_1sdp"
           app:civ_background_color="@android:color/white"
-          app:civ_border_color="@android:color/white"
+          app:civ_border_color="@color/colorAppDeep"
           app:civ_shadow="false"
           android:contentDescription="@string/app_name"
           android:layout_centerInParent="true"
