--- a/app/src/main/res/layout/fragment_token_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_token_withdrawal.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipeRefreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
- <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rootLayout">
@@ -130,4 +126,3 @@
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
