--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/splash"
     android:id="@+id/rootLayout">
 
@@ -13,71 +13,28 @@
             android:layout_height="@dimen/_120sdp"
             android:src="@drawable/lpesa_logo"
             android:contentDescription="@string/app_name"
-            android:layout_centerInParent="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
 
             />
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtTitle"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_14sdp"
-            android:layout_below="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/colorWhite"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_12sdp"
-            android:layout_marginEnd="@dimen/_12sdp"
-            android:text="@string/no_internet"
-            android:visibility="invisible"/>
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtHeader"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_11sdp"
-            android:layout_below="@+id/txtTitle"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/colorWhite"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:layout_marginStart="@dimen/_12sdp"
-            android:layout_marginEnd="@dimen/_12sdp"
-            android:text="@string/no_internet_details"
-            android:visibility="invisible"/>
-
-
-        <com.app.l_pesa.common.CustomButtonRegular
-            android:id="@+id/buttonRetry"
-            android:layout_width="@dimen/_125sdp"
-            android:layout_height="@dimen/_35sdp"
-            android:gravity="center"
-            android:textSize="@dimen/_12sdp"
-            android:layout_below="@+id/txtHeader"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/colorSemiBlack"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:background="@drawable/bg_button_yellow"
-            android:text="@string/retry"
-            android:visibility="invisible"/>
-
 
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="@dimen/_27sdp"
-            android:layout_height="@dimen/_27sdp"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
             android:indeterminateTint="@color/colorWhite"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
             android:layout_marginBottom="@dimen/_10sdp"
-            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
 
             />
 
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
 
