--- a/app/src/main/res/layout/content_help.xml
+++ b/app/src/main/res/layout/content_help.xml
@@ -26,22 +26,21 @@
 
         <ImageView
             android:id="@+id/imgShade"
-            android:layout_width="@dimen/_75sdp"
-            android:layout_height="@dimen/_75sdp"
+            android:layout_width="@dimen/_65sdp"
+            android:layout_height="@dimen/_65sdp"
             android:contentDescription="@string/app_name"
             android:layout_gravity="center"
             android:background="@drawable/ic_hexagonal_bg"
-            android:padding="@dimen/_20sdp"
+            android:padding="@dimen/_25sdp"
 
             />
 
         <ImageView
             android:id="@+id/imgCountry"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_20sdp"
             android:contentDescription="@string/app_name"
             android:layout_gravity="center"
-
 
             />
 
@@ -55,13 +54,90 @@
         android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_17sdp"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/dark_text_color"
+        android:textColor="@color/colorTextBlack"
         android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameHead" />
+        app:layout_constraintTop_toBottomOf="@+id/frameHead"
+        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
+       />
 
+    <View
+        android:id="@+id/viewDivider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:background="@color/divider_color"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtCountry"
+        app:layout_constraintBottom_toTopOf="@+id/viewDividerTwo"
+
+        />
+
+
+    <View
+        android:id="@+id/viewDividerTwo"
+        android:layout_width="@dimen/_1sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_marginBottom="@dimen/_3sdp"
+        android:background="@color/divider_color"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
+        app:layout_constraintBottom_toTopOf="@+id/rv_list"
+
+        />
+
+    <TextView
+        android:id="@+id/txtPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_2sdp"
+        android:textSize="@dimen/_12sdp"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/colorTextBlackLight"
+        android:gravity="center"
+        android:drawablePadding="@dimen/_5sdp"
+        android:drawableStart="@drawable/ic_call_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
+        app:layout_constraintEnd_toStartOf="@+id/viewDividerTwo"
+        app:layout_constraintBottom_toBottomOf="@+id/viewDividerTwo"
+        />
+
+    <TextView
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_2sdp"
+        android:textSize="@dimen/_12sdp"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/colorTextBlackLight"
+        android:gravity="center"
+        android:drawablePadding="@dimen/_5sdp"
+        android:drawableStart="@drawable/ic_call_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
+        app:layout_constraintStart_toEndOf="@+id/viewDividerTwo"
+        app:layout_constraintBottom_toBottomOf="@+id/viewDividerTwo"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewDividerTwo"
+
+        />
 
 
 </android.support.constraint.ConstraintLayout>
