--- a/app/src/main/res/layout/content_help.xml
+++ b/app/src/main/res/layout/content_help.xml
@@ -7,9 +7,24 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".help.view.HelpActivity"
     tools:showIn="@layout/activity_help"
-    android:orientation="vertical"
-    android:background="@color/colorWhite">
+    android:background="@color/screenBackground"
+    >
 
+    <LinearLayout
+        android:id="@+id/llHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/colorWhite"
+        tools:ignore="MissingConstraints">
+
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
     <FrameLayout
         android:id="@+id/frameHead"
@@ -31,7 +46,7 @@
             android:contentDescription="@string/app_name"
             android:layout_gravity="center"
             android:background="@drawable/ic_hexagonal_bg"
-            android:padding="@dimen/_25sdp"
+            android:padding="@dimen/_20sdp"
 
             />
 
@@ -51,10 +66,10 @@
         android:id="@+id/txtCountry"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:textSize="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:textSize="@dimen/_16sdp"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorTextBlack"
+        android:textColor="@color/textColors"
         android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,21 +104,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
-        app:layout_constraintBottom_toTopOf="@+id/rv_list"
 
         />
 
     <TextView
         android:id="@+id/txtPhone"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_11sdp"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorTextBlackLight"
-        android:gravity="center"
+        android:gravity="center|start"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_1sdp"
         android:drawablePadding="@dimen/_5sdp"
-        android:drawableStart="@drawable/ic_call_icon"
+        android:drawableStart="@drawable/ic_call"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
         app:layout_constraintEnd_toStartOf="@+id/viewDividerTwo"
@@ -112,22 +128,28 @@
 
     <TextView
         android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_11sdp"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorTextBlackLight"
-        android:gravity="center"
+        android:gravity="center|start"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_1sdp"
         android:drawablePadding="@dimen/_5sdp"
-        android:drawableStart="@drawable/ic_call_icon"
+        android:drawableStart="@drawable/ic_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
         app:layout_constraintStart_toEndOf="@+id/viewDividerTwo"
         app:layout_constraintBottom_toBottomOf="@+id/viewDividerTwo"
         />
 
-    <android.support.v7.widget.RecyclerView
+    </android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
+
+   <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -135,9 +157,10 @@
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewDividerTwo"
+        app:layout_constraintTop_toBottomOf="@+id/llHeader"
 
         />
+
 
 
 </android.support.constraint.ConstraintLayout>
