--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -534,8 +534,8 @@
 
                         <ImageView
                             android:id="@+id/imageView6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
                             android:layout_marginStart="@dimen/_10sdp"
                             android:contentDescription="@string/app_name"
                             app:layout_constraintBottom_toTopOf="@+id/imageView7"
@@ -566,10 +566,10 @@
                         <ImageView
                             android:id="@+id/imageView7"
                             android:contentDescription="@string/app_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
                             android:layout_marginStart="@dimen/_10sdp"
-                            android:layout_marginTop="@dimen/_4sdp"
+                            android:layout_marginTop="@dimen/_3sdp"
                             app:layout_constraintBottom_toTopOf="@+id/imageView8"
                             app:layout_constraintEnd_toStartOf="@+id/txtGender"
                             app:layout_constraintHorizontal_bias="0.5"
@@ -599,10 +599,10 @@
                         <ImageView
                             android:id="@+id/imageView8"
                             android:contentDescription="@string/app_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
                             android:layout_marginStart="@dimen/_10sdp"
-                            android:layout_marginTop="@dimen/_4sdp"
+                            android:layout_marginTop="@dimen/_3sdp"
                             app:layout_constraintBottom_toTopOf="@+id/imageView9"
                             app:layout_constraintEnd_toStartOf="@+id/txtMartialStatus"
                             app:layout_constraintHorizontal_bias="0.5"
@@ -631,11 +631,11 @@
 
                         <ImageView
                             android:id="@+id/imageView9"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
                             android:contentDescription="@string/app_name"
                             android:layout_marginStart="@dimen/_10sdp"
-                            android:layout_marginTop="@dimen/_4sdp"
+                            android:layout_marginTop="@dimen/_3sdp"
                             app:layout_constraintEnd_toStartOf="@+id/txtMotherName"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
@@ -912,6 +912,7 @@
                             android:id="@+id/imageView19"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_3sdp"
                             android:layout_marginStart="@dimen/_10sdp"
                             android:contentDescription="@string/app_name"
                             app:layout_constraintBottom_toBottomOf="@+id/txtContact"
@@ -925,7 +926,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_5sdp"
-                            android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_marginTop="@dimen/_8sdp"
                             android:fontFamily="@font/montserrat"
                             android:textColor="@color/textColors"
                             android:textSize="@dimen/_11sdp"
