--- a/app/src/main/res/layout/content_help.xml
+++ b/app/src/main/res/layout/content_help.xml
@@ -100,6 +100,7 @@
         android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="@dimen/_3sdp"
         android:layout_marginBottom="@dimen/_3sdp"
+        android:visibility="invisible"
         android:background="@color/divider_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,11 +111,11 @@
     <TextView
         android:id="@+id/txtPhone"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_height="@dimen/_37sdp"
         android:layout_marginTop="@dimen/_2sdp"
         android:textSize="@dimen/_11sdp"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorTextBlackLight"
+        android:textColor="@color/textColors"
         android:gravity="center|start"
         android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_1sdp"
@@ -129,11 +130,11 @@
     <TextView
         android:id="@+id/txtEmail"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_height="@dimen/_37sdp"
         android:layout_marginTop="@dimen/_2sdp"
         android:textSize="@dimen/_11sdp"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorTextBlackLight"
+        android:textColor="@color/textColors"
         android:gravity="center|start"
         android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_1sdp"
@@ -147,19 +148,99 @@
 
     </android.support.constraint.ConstraintLayout>
 
+        <View
+            android:id="@+id/viewDividerThree"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:background="@color/divider_color"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCountry"
+            app:layout_constraintBottom_toTopOf="@+id/viewDividerTwo"
+
+            />
+
     </LinearLayout>
 
-   <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_list"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/layoutContact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llHeader"
 
-        />
+        >
+
+        <TextView
+            android:id="@+id/txtTelegram"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:textSize="@dimen/_12sdp"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorTextBlack"
+            android:gravity="center|start"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            android:drawablePadding="@dimen/_5sdp"
+            android:drawableStart="@drawable/ic_telegram"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorSemiWhite"
+
+            />
+
+        <View
+            android:id="@+id/viewDividerFour"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:background="@color/divider_color"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtTelegram"
+
+            />
+
+        <TextView
+            android:id="@+id/txtWhatsApp"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_40sdp"
+            android:textSize="@dimen/_12sdp"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorTextBlack"
+            android:background="@color/colorSemiWhite"
+            android:gravity="center|start"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            android:drawablePadding="@dimen/_5sdp"
+            android:drawableStart="@drawable/ic_whats_app"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewDividerFour"
+
+            />
+
+        <View
+            android:id="@+id/viewDividerFive"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:background="@color/divider_color"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtWhatsApp"
+
+            />
+
+
+    </android.support.constraint.ConstraintLayout>
 
 
 
