--- a/app/src/main/res/layout/content_registration_step_three.xml
+++ b/app/src/main/res/layout/content_registration_step_three.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/rootLayout"
     android:padding="@dimen/_40sdp"
+    android:background="@color/colorWhite"
     >
 
     <TextView
