--- a/app/src/main/res/layout/content_set_up_pin.xml
+++ b/app/src/main/res/layout/content_set_up_pin.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/screenBackground"
-        xmlns:android="http://schemas.android.com/apk/res/android" >
+       >
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -22,7 +22,8 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/_10sdp">
+                android:padding="@dimen/_10sdp"
+                >
 
               <com.app.l_pesa.common.CommonInputLayout
                     android:id="@+id/commonInputLayout12"
@@ -32,7 +33,6 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     app:layout_constraintBottom_toTopOf="@+id/commonInputLayout13"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                    >
