--- a/app/src/main/res/layout/content_change_login_pin.xml
+++ b/app/src/main/res/layout/content_change_login_pin.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -37,7 +36,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/current_pin"
-                        android:inputType="numberPassword"
+                        android:inputType="numberSigned"
                         android:maxLength="6"
                         android:maxLines="1"
                         android:textSize="@dimen/_13sdp"
@@ -66,7 +65,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/new_pin"
-                        android:inputType="numberPassword"
+                        android:inputType="numberSigned"
                         android:maxLength="6"
                         android:maxLines="1"
                         android:textSize="@dimen/_13sdp"
@@ -95,7 +94,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/confirm_new_pin"
-                        android:inputType="numberPassword"
+                        android:inputType="numberSigned"
                         android:maxLength="6"
                         android:maxLines="1"
                         android:textSize="@dimen/_13sdp"
