--- a/app/src/main/res/drawable/ic_hexagonal_bg.xml
+++ b/app/src/main/res/drawable/ic_hexagonal_bg.xml
@@ -1,5 +1,5 @@
-<vector android:alpha="0.65" android:height="24dp"
+<vector android:alpha="0.75" android:height="24dp"
     android:viewportHeight="48" android:viewportWidth="48"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00BFA5" android:pathData="M23.7,1.8L3.6,13.6v20.7l20.1,11.8l20.1,-11.8v-0.6V13.6L23.7,1.8zM5.6,33.1V14.7L23.7,4.1l18.1,10.6v18.4L23.7,43.8L5.6,33.1z"/>
+    <path android:fillColor="#00BFA5" android:pathData="M23.7,1.8L3.6,13.6v20.7l20.1,11.8l20.1,-11.8v-0.6V13.6L23.7,1.8zM4.4,33.7V14.1L23.7,2.8L43,14.1v19.6L23.7,45.1L4.4,33.7z"/>
 </vector>
