--- a/app/src/main/res/layout/fragment_token_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_token_withdrawal.xml
@@ -74,8 +74,9 @@
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etToken"
-                    android:inputType="numberSigned"
-                    android:maxLength="10"
+                    android:inputType="number"
+                    android:digits="0123456789"
+                    android:maxLength="8"
                     android:textSize="@dimen/_13sdp"
                     android:longClickable="false"
                     android:layout_width="match_parent"
