--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -1,6 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        android:paddingTop="@dimen/_10sdp"
+
+        >
+
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txt_loan_type"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_14sdp"
+            android:padding="@dimen/_5sdp"
+            android:text="@string/loan_type"
+            android:textColor="@color/dark_text_color"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent=".5"
+            app:layout_constraintEnd_toStartOf="@+id/txt_product_type"
+
+            />
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txt_product_type"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_14sdp"
+            android:padding="@dimen/_5sdp"
+            android:text="@string/product_name"
+            android:textColor="@color/dark_text_color"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent=".5"
+            app:layout_constraintStart_toEndOf="@+id/txt_loan_type"
+
+            />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
