--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,14 +21,15 @@
             android:id="@+id/txt_loan_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_14sdp"
-            android:padding="@dimen/_5sdp"
+            android:textSize="@dimen/_12sdp"
+            android:padding="@dimen/_2sdp"
             android:text="@string/loan_type"
             android:textColor="@color/dark_text_color"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintWidth_percent=".5"
             app:layout_constraintEnd_toStartOf="@+id/txt_product_type"
+            app:layout_constraintBottom_toTopOf="@+id/ll_loan_type"
 
             />
 
@@ -34,19 +37,119 @@
             android:id="@+id/txt_product_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_14sdp"
-            android:padding="@dimen/_5sdp"
+            android:textSize="@dimen/_12sdp"
+            android:padding="@dimen/_2sdp"
             android:text="@string/product_name"
             android:textColor="@color/dark_text_color"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent=".5"
             app:layout_constraintStart_toEndOf="@+id/txt_loan_type"
+            app:layout_constraintBottom_toTopOf="@+id/ll_product_name"
+
+            />
+
+    <LinearLayout
+        android:id="@+id/ll_loan_type"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_7sdp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_loan_type"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent=".47"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCalculateLoan"
+
+        >
+
+
+        <com.app.l_pesa.common.CommonInputLayout
+            style="@style/customInputLayoutStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/textColors"
+
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ti_loan_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/choose_loan_type"
+                android:focusable="false"
+                android:inputType="none"
+                android:cursorVisible="false"
+                android:textColor="@color/textColors"
+                android:textColorHint="@color/textColors"
+                android:textSize="@dimen/_10sdp"
+                android:drawableEnd="@drawable/ic_down_arrow"
+                />
+        </com.app.l_pesa.common.CommonInputLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/ll_product_name"
+            app:layout_constraintStart_toEndOf="@+id/ll_loan_type"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_product_type"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent=".47"
+
+
+            >
+
+
+            <com.app.l_pesa.common.CommonInputLayout
+                style="@style/customInputLayoutStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/textColors"
+
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ti_product_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:inputType="none"
+                    android:cursorVisible="false"
+                    android:hint="@string/choose_option"
+                    android:textColor="@color/textColors"
+                    android:textColorHint="@color/textColors"
+                    android:textSize="@dimen/_10sdp"
+                    android:drawableEnd="@drawable/ic_down_arrow"
+                    />
+            </com.app.l_pesa.common.CommonInputLayout>
+
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/buttonCalculateLoan"
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_32sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/btn_round"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/calculate_your_loan"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll_loan_type"
 
             />
 
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </LinearLayout>
