--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -24,7 +24,7 @@
             android:textSize="@dimen/_12sdp"
             android:padding="@dimen/_2sdp"
             android:text="@string/loan_type"
-            android:textColor="@color/dark_text_color"
+            android:textColor="@color/textColors"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintWidth_percent=".5"
@@ -40,7 +40,7 @@
             android:textSize="@dimen/_12sdp"
             android:padding="@dimen/_2sdp"
             android:text="@string/product_name"
-            android:textColor="@color/dark_text_color"
+            android:textColor="@color/textColors"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent=".5"
@@ -52,7 +52,7 @@
     <LinearLayout
         android:id="@+id/ll_loan_type"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_height="@dimen/_45sdp"
         android:layout_marginTop="@dimen/_7sdp"
         app:layout_constraintTop_toBottomOf="@+id/txt_loan_type"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/textColors"
-
+            app:hintTextAppearance="@style/TextLabel"
             >
 
             <com.google.android.material.textfield.TextInputEditText
@@ -90,11 +90,11 @@
 
     <LinearLayout
             android:id="@+id/ll_product_name"
-            app:layout_constraintStart_toEndOf="@+id/ll_loan_type"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_40sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_marginTop="@dimen/_7sdp"
             app:layout_constraintTop_toBottomOf="@+id/txt_product_type"
+            app:layout_constraintStart_toEndOf="@+id/ll_loan_type"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent=".47"
 
@@ -107,8 +107,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/textColors"
+                app:hintTextAppearance="@style/TextLabel"
 
-                >
+               >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ti_product_name"
@@ -143,6 +144,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ll_loan_type"
+            app:layout_constraintBottom_toTopOf="@+id/view_divider"
+
+            />
+
+        <View
+            android:id="@+id/view_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@color/divider_color"
+            app:layout_constraintTop_toBottomOf="@+id/buttonCalculateLoan"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
 
             />
 
