--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,5 +57,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TextLabel" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">@dimen/_11sdp</item>
+    </style>
+
 
 </resources>
