--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,4 +45,17 @@
     <color name="dark_text_color">#3b3e42</color>
     <color name="color_green_success">#0d8f4f</color>
 
+    <color name="default_thumb_color">#ff6f00</color>
+    <color name="default_track_color">#c3a9a9a9</color>
+
+    <array name="default_index_gradient">
+        <item>@color/color_green_success</item>
+        <item>@color/colorRed</item>
+    </array>
+
+    <array name="default_track_gradient">
+        <item>@color/default_track_color</item>
+    </array>
+
+
 </resources>
