--- a/app/src/main/res/drawable/progress_thumb.xml
+++ b/app/src/main/res/drawable/progress_thumb.xml
@@ -22,7 +22,7 @@
         android:right="@dimen/_5sdp"
         android:top="@dimen/_5sdp">
         <shape android:shape="oval">
-            <solid android:color="@color/colorWhite"/>
+            <solid android:color="@android:color/darker_gray"/>
         </shape>
     </item>
 </layer-list>
